ADD_SUBDIRECTORY(ch02-language-foundation)
ADD_SUBDIRECTORY(ch03_format_io)
ADD_SUBDIRECTORY(ch04_expression)
ADD_SUBDIRECTORY(ch05_select_statement)
ADD_SUBDIRECTORY(ch06_loop)
ADD_SUBDIRECTORY(ch07_base_type)
ADD_SUBDIRECTORY(ch08_array)
ADD_SUBDIRECTORY(ch09_function)
ADD_SUBDIRECTORY(ch10_program_structure)