ADD_SUBDIRECTORY(ch02-language-foundation)
ADD_SUBDIRECTORY(ch03_format_io)
ADD_SUBDIRECTORY(ch04_expression)
ADD_SUBDIRECTORY(ch05_select_statement)
ADD_SUBDIRECTORY(ch06_loop)
ADD_SUBDIRECTORY(ch07_base_type)
ADD_SUBDIRECTORY(ch08_array)
ADD_SUBDIRECTORY(ch09_function)
ADD_SUBDIRECTORY(ch10_program_structure)
ADD_SUBDIRECTORY(ch11_pointer)
ADD_SUBDIRECTORY(ch12_pointer_and_array)
ADD_SUBDIRECTORY(ch13_string)
ADD_SUBDIRECTORY(ch14_preprocessor)
ADD_SUBDIRECTORY(ch15_large_program)
ADD_SUBDIRECTORY(ch16_struct_union_enum)
ADD_SUBDIRECTORY(ch17_advanced_pointer)
ADD_SUBDIRECTORY(ch18_declare)
ADD_SUBDIRECTORY(ch19_programming_design)
ADD_SUBDIRECTORY(ch20_underlying_programming)