add_executable(01_dynamic_memory_allocation 01_dynamic_memory_allocation.c)
add_executable(reminder_improved_version reminder_improved_version.c)
add_executable(02_dynamic_array_allocation 02_dynamic_array_allocation.c)
add_executable(03_free_memory 03_free_memory.c)
add_executable(04_linked_list 04_linked_list.c)
add_executable(05_ordered_linked_list 05_ordered_linked_list.c read_line.c)
add_executable(06_pointer_to_pointer 06_pointer_to_pointer.c)
add_executable(07_pointer_to_function 07_pointer_to_function.c)
add_executable(tabulate tabulate.c)
add_executable(08_restrict_pointer 08_restrict_pointer.c)