add_executable(01_syntax_of_declaration 01_syntax_of_declaration.c)
add_executable(02_storage_type 02_storage_type.c)
add_executable(03_type_qualifier 03_type_qualifier.c)
add_executable(04_declarator 04_declarator.c)
add_executable(05_initializer 05_initializer.c)
add_executable(06_inline_definition 06_inline_definition.c)
add_executable(07_no_return 07_no_return.c)
add_executable(08_static_assertions 08_static_assertions.c)