add_executable(01_stream 01_stream.c)
add_executable(02_file_operation 02_file_operation.c)
add_executable(02_05_can_open 02_05_can_open.c)
add_executable(03_format_io 03_format_io.c)
add_executable(04_char_io 04_char_io.c)
add_executable(04_fcopy 04_fcopy.c)
add_executable(05_line_io 05_line_io.c)
add_executable(06_block_io 06_block_io.c)
add_executable(07_file_location 07_file_location.c)
add_executable(07_01_invclear 07_01_invclear.c)
add_executable(08_string_io 08_string_io.c)