add_executable(exercise_1_find_the_largest_number exercise_1_find_the_largest_number.c)
add_executable(exercise_2_greatest_common_divisor exercise_2_greatest_common_divisor.c)
add_executable(exercise_3_lowest_terms exercise_3_lowest_terms.c exercise_2_greatest_common_divisor.c)
add_executable(exercise_5_reverse_number exercise_5_reverse_number.c)
add_executable(exercise_6_even_square exercise_6_even_square.c)
add_executable(exercise_8_month_calendar exercise_8_month_calendar.c)
add_executable(exercise_10_earliest_date exercise_10_earliest_date.c)
add_executable(exercise_11_eval exercise_11_eval.c)