add_executable(exercise_1_square exercise_1_square.c)
add_executable(exercise_3_sum2 exercise_3_sum2.c)
add_executable(exercise_4_transfer_phone_number exercise_4_transfer_phone_number.c)
add_executable(exercise_5_crosswords_puzzle exercise_5_crosswords_puzzle.c)
add_executable(exercise_6_sizeof_base_type exercise_6_sizeof_base_type.c)
add_executable(exercise_8_twelve_clock exercise_8_twelve_clock.c)
add_executable(exercise_10_count_vowels exercise_10_count_vowels.c)
add_executable(exercise_11_name_abbr exercise_11_name_abbr.c)
add_executable(exercise_12_expression_evaluation exercise_12_expression_evaluation.c)
add_executable(exercise_13_average_word_length exercise_13_average_word_length.c)
add_executable(exercise_14_newton exercise_14_newton.c)
add_executable(exercise_15_factorial exercise_15_factorial.c)