add_executable(exercise_1_rep_digit exercise_1_rep_digit.c)
add_executable(exercise_2_rep_digit_2 exercise_2_rep_digit_2.c)
add_executable(exercise_3_rep_digit_3.c exercise_3_rep_digit_3.c)
add_executable(exercise_4_reverse exercise_4_reverse.c)
add_executable(exercise_5_interest exercise_5_interest.c)
add_executable(exercise_6_b1ff exercise_6_b1ff.c)
add_executable(exercise_7_matrix_summation exercise_7_matrix_summation.c)
add_executable(exercise_8_score_statistics exercise_8_score_statistics.c)
add_executable(exercise_9_random_walk exercise_9_random_walk.c)
add_executable(exercise_11_transfer_phone_number exercise_11_transfer_phone_number.c)