add_executable(exercise_01_reverse_message exercise_01_03_reverse_message.c)
add_executable(exercise_02_palindrome exercise_02_04_palindrome.c)
add_executable(exercise_05_reverse_sentence exercise_05_reverse_sentence.c)
add_executable(exercise_06_qsort exercise_06_qsort.c)
add_executable(exercise_07_max_min exercise_07_max_min.c)