add_executable(exercise_01_max_min_words exercise_01_max_min_words.c)
add_executable(exercise_02_remind exercise_02_remind.c)
add_executable(exercise_03_deal exercise_03_deal.c)
add_executable(exercise_04_reverse exercise_04_reverse.c)
add_executable(exercise_05_sum exercise_05_sum.c)
add_executable(exercise_06_planet exercise_06_planet.c)
add_executable(exercise_07_number_to_words exercise_07_number_to_words.c)
add_executable(exercise_08_crosswords_puzzle exercise_08_crosswords_puzzle.c)
add_executable(exercise_09_count_vowels exercise_09_count_vowels.c)
add_executable(exercise_10_reverse_name exercise_10_reverse_name.c)
add_executable(exercise_11_average_word_length exercise_11_average_word_length.c)