ADD_SUBDIRECTORY(exercise_01_inventory_src)
ADD_SUBDIRECTORY(exercise_02_inventory_src)
ADD_SUBDIRECTORY(exercise_03_inventory)
ADD_SUBDIRECTORY(exercise_04_justify)
ADD_SUBDIRECTORY(exercise_05_words_storage)
ADD_SUBDIRECTORY(exercise_06_words_storage)
add_executable(exercise_07_reminder exercise_07_reminder.c)