add_executable(01_can_open 01_can_open.c)
add_executable(02_to_upper 02_to_upper.c)
add_executable(03_fcat 03_fcat.c)
add_executable(04_01_count_char 04_01_count_char.c)
add_executable(04_02_count_words 04_02_count_words.c)
add_executable(04_03_count_line 04_03_count_line.c)
add_executable(05_xor 05_xor.c)
add_executable(06_byte_and_characters 06_byte_and_characters.c)
add_executable(07_01_compress_file 07_01_compress_file.c)
add_executable(07_02_uncompress 07_02_uncompress.c)