add_executable(01_can_open 01_can_open.c)
add_executable(02_to_upper 02_to_upper.c)
add_executable(03_fcat 03_fcat.c)
add_executable(04_01_count_char 04_01_count_char.c)
add_executable(04_02_count_words 04_02_count_words.c)
add_executable(04_03_count_line 04_03_count_line.c)
add_executable(05_xor 05_xor.c)
add_executable(06_byte_and_characters 06_byte_and_characters.c)
add_executable(07_01_compress_file 07_01_compress_file.c)
add_executable(07_02_uncompress 07_02_uncompress.c)

ADD_SUBDIRECTORY(08_inventory)
ADD_SUBDIRECTORY(09_inventory)
ADD_SUBDIRECTORY(10_inventory)

add_executable(11_format_date 11_format_date.c)
add_executable(12_format_product_info 12_format_product_info.c)
add_executable(13_flights 13_flights.c)
add_executable(14_caesar 14_caesar.c)

ADD_SUBDIRECTORY(15_justify)

add_executable(16_fcopy 16_fcopy.c)
add_executable(17_format_phone_number 17_format_phone_number.c)
add_executable(18_sort_integer 18_sort_integer.c)

ADD_SUBDIRECTORY(19_unix_and_windows_file)